name:                unlimited-interpreter-works
version:             0.0.1
synopsis:            A family of untyped lambda calculus interpreters.
description:         See README.md for details.
homepage:            http://github.com/TerrorJack/unlimited-interpreter-works
license:             BSD3
license-file:        LICENSE
author:              Shao Cheng
maintainer:          astrohavoc@gmail.com
copyright:           2016 Shao Cheng
category:            Language
build-type:          Simple
cabal-version:       >=1.22

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base
  ghc-options:         -Wall

source-repository head
  type:     git
  location: https://github.com/TerrorJack/unlimited-interpreter-works 
